8222893: markOopDesc::print_on() is a bit confused

Add print_on for ObjectMonitor and make markOop printing sensible and add test.

Reviewed-by: dcubed, pchilanomate